@@ -2,6 +2,7 @@ package br.com.jnsdev.task.controller.converter;
 
 import br.com.jnsdev.task.controller.dto.TaskDTO;
 import br.com.jnsdev.task.model.Task;
+import br.com.jnsdev.task.model.TaskState;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
@@ -23,6 +24,7 @@ public class TaskDTOConverter {
     public Task convert(TaskDTO taskDTO) {
         return Optional.ofNullable(taskDTO)
                 .map(source -> Task.builder()
+                        .id(source.getId())
                         .title(source.getTitle())
                         .description(source.getDescription())
                         .priority(source.getPriority())
@@ -31,10 +33,20 @@ public class TaskDTOConverter {
                 ).orElse(null);
     }
 
+    public Task converter(String id, String title, String description, int priority, TaskState state) {
+        return Task.builder()
+                .id(id)
+                .title(title)
+                .description(description)
+                .priority(priority)
+                .state(state)
+                .build();
+    }
+
     public List<TaskDTO> convertList(List<Task> taskList) {
         return Optional.ofNullable(taskList)
                 .map(array -> array.stream()
-                        .map(this::convert).collect(Collectors.toList()))
+                        .map(this::convert).toList())
                 .orElse(new ArrayList<>());
     }
 
